--- a/Exececios/desafio012/style.css
+++ b/Exececios/desafio012/style.css
@@ -63,15 +63,34 @@ section.normal {
     background-color: white;
     color: black;
 }
+
+section> p {
+    padding-bottom: 2em;
+}
+
 section.imagem {
     background-color: rgb(95, 93, 93);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.534);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.527);
+    text-shadow: 1px 1px 0px black;
+}
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    background-size: cover;
 }
 
 footer {
